syntax = "proto3";

package outputs;

import "pointers.proto";
import "common.proto";

enum OutputType {
  UNKNOWN_OUTPUT_TYPE = 0;
  COIN = 1;
  CONTRACT = 2;
  CHANGE = 3;
  VARIABLE = 4;
  CONTRACT_CREATED = 5;
}

message Output {
  OutputType type = 1;
  pointers.OutputPointer pointer = 2;
  
  oneof data {
    OutputCoin coin = 3;
    OutputContract contract = 4;
    OutputChange change = 5;
    OutputVariable variable = 6;
    OutputContractCreated contract_created = 7;
  }

  // Metadata
  common.Metadata metadata = 8;
}

message OutputCoin {
  string to = 1;
  int64 amount = 2;
  string asset_id = 3;
}

message OutputContract {
  string balance_root = 1;
  string state_root = 2;
  int32 input_index = 3;
}

message OutputContractCreated {
  string contract_id = 1;
  string state_root = 2;
}

message OutputChange {
  string to = 1;
  int64 amount = 2;
  string asset_id = 3;
}

message OutputVariable {
  string to = 1;
  int64 amount = 2;
  string asset_id = 3;
}