syntax = "proto3";

package pointers;

message BlockPointer {
  string subject = 1;
}

message TxPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  string cursor = 5;
}

message InputPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  int32 input_index = 5;
  string cursor = 6;
}

message OutputPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  int32 output_index = 5;
  string cursor = 6;
}

message ReceiptPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  int32 receipt_index = 5;
  string cursor = 6;
}

message UtxoPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  int32 utxo_id = 5;
  int32 input_index = 6;
  int32 output_index = 7;
  string cursor = 8;
}

message PredicatePointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  int32 input_index = 5;
  string cursor = 6;
}

message ContractPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  int32 output_index = 5;
  string cursor = 6;
}

message ScriptPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  string cursor = 6;
}

message AssetPointer {
  string subject = 1;
  int64 block_height = 2;
  string tx_id = 3;
  int32 tx_index = 4;
  string contract_id = 5;
  string asset_id = 6;
  string cursor = 7;
}
